<resources>
    <string name="app_name">SuDrives</string>
    <string name="title_activity_main_home">MainHomeActivity</string>
    <string name="fb_key_hash_debug">ga0RGNYHvNM5d0SLGQfpQWAPGJ8=</string>
    <string name="fb_key_hash_release">zY00cczs2SG28RTn1bZQvsCftvI=</string>
    <string name="facebook_app_id">418594956056861</string>
    <string name="fb_login_protocol_scheme">fb418594956056861</string>
    <string name="google_api_keys">AIzaSyAVNsvTkS6bt2-q12RgQoL0S9g7o_VbxeQ</string>
    <string name="direction_api_key">AIzaSyAVNsvTkS6bt2-q12RgQoL0S9g7o_VbxeQ</string>
    <string name="country_code">+91</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hn">Hin</string>
    <string name="en">En</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="livetrips">Live Trip</string>
    <string name="refer_n_win"><![CDATA[Refer & Win]]></string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="promotions">Promotions</string>
    <string name="report_issue">Report Issue</string>
    <string name="reported_issue">Reported Issue</string>
    <string name="rate_card">Rate Card</string>
    <string name="logout">Logout</string>
    <string name="my_bookings">My Bookings</string>
    <string name="booking_history">Booking History</string>
    <string name="title_activity_home_menu">HomeMenuActivity</string>
    <string name="no_internet_connection">\"No internet connection\"</string>
    <string name="you_can_win_prizes">Invite yor Family &amp; Friends</string>
    <string name="win_first_trip_by_refering_the_refer_code">Get Rewards and point on first trip by referring the \n referral code!</string>
    <string name="share_and_invite">Share &amp; Invite</string>
    <string name="your_referral_code">Your referral code</string>
    <string name="share">Share</string>
    <string name="share_using">Share Using</string>
    <string name="referral_code">Referral Code</string>
    <string name="welcome">Welcome!</string>
    <string name="join_sign_in_using">Join / Sign In using</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="full_name">Please enter full name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="register">Register</string>
    <string name="change">Change</string>
    <string name="cancel_search_cab">Cancelling search</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="address">Address</string>
    <string name="editProfile">Profile</string>
    <string name="by_logging_in_you_are_agreed_to_our">By logging in you are agreed to our terms of services and privacy policy</string>
    <string name="terms_of_services">terms of services</string>
    <string name="Terms_of_services">Terms of services</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="Privacy_policy">Privacy policy</string>
    <string name="and">and</string>
    <string name="here">Here</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="would_you_like_for_your_purchase_to_be_reveiwed_for_a_free">would you like for your purchase to be reviewed for a free.....................................?</string>
    <string name="confirmation">Confirmation</string>
    <string name="error_no_con_msg">No internet connection found, please do check your network settings.</string>
    <string name="error_no_connection">No Internet Connection</string>
    <string name="text_settings">Check Internet Settings</string>
    <string name="text_close">Close</string>
    <string name="english">english</string>
    <string name="hindi">hindi</string>
    <string name="gps_setting">GPS is settings</string>
    <string name="gps_is_not_enabled">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="something_went_wrong">Something went wrong, Please try again.</string>
    <string name="x">X</string>
    <string name="not_Now">Not Now</string>
    <string name="update">Update</string>
    <string name="app_update">Application Update!!!</string>
    <string name="Please_enter_mobile_num">Please enter mobile number</string>
    <string name="Please_enter_valid_mobile_num">Please enter valid mobile number</string>
    <string name="location_sevice_not_active">Location Services Not Active</string>
    <string name="please_enable_location_services_and_gps">Please enable Location Services and GPS</string>
    <string name="please_enable_location_services_and_gps_to_continue">Please enable Location Services and GPS to continue</string>
    <string name="storage">Storage</string>
    <string name="camera">Camera</string>
    <string name="location">Location</string>
    <string name="permission_rationale_storage">Access to the storage is required for accessing images from your storage.</string>
    <string name="permission_rationale_camera">Access to the camera is required for capturing new images.</string>
    <string name="permission_rationale_location">Access to the location is required for showing your location on map.</string>
    <string name="permission_denied">App requires %s permission. Please try again and grant access to use it.\nIf the permission has been permanently denied, it can be enabled from the System Settings.</string>
    <string name="permission_required_toast">%s permission is required for app usage.</string>
    <string name="No_Internet_Connection_Detected">No Internet Connection Detected</string>
    <string name="This_app_needs_phone_permission">This app needs permissions, please check settings.</string>
    <string name="grant">GRANT</string>
    <string name="enable">Enable</string>
    <string name="email_optional">Email (Optional)</string>
    <string name="have_a_promo_code">Have a PromoCode?</string>
    <string name="have_a_referral_code">Have a Referral code?</string>
    <string name="PromoCode">PromoCode</string>
    <string name="English">English</string>
    <string name="Hindi">Hindi</string>
    <string name="Hindi_in_hindi">हिंदी</string>
    <string name="Please_enter_email_id">Please enter email id</string>
    <string name="Please_enter_lname">Please enter last name</string>
    <string name="Please_enter_full_name">Please enter full name</string>
    <string name="Please_enter_valid_email_id">Please enter valid email id</string>
    <string name="Please_enter_registered_email_id">Please enter registered email id</string>
    <string name="please_accept_terms_n_comditions">Please accept terms and conditions</string>
    <string name="title">Title</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="Please_enter_otp">Please enter OTP</string>
    <string name="Please_enter_valid_otp">Please enter valid OTP</string>
    <string name="book_now">Book Now</string>
    <string name="book_later">Book Later</string>
    <string name="daily">Daily</string>
    <string name="rental">Rental</string>
    <string name="outstation">Outstation</string>
    <string name="pin_location">Pickup Location</string>
    <string name="search_drop_location">Search drop location</string>
    <string name="surcharge">Surcharge</string>
    <string name="booknow">Book Now</string>
    <string name="payload">payload</string>
    <string name="lbh">lbh</string>
    <string name="estimated_fare">Expected Fare</string>
    <string name="Please_select_gender">Please select gender</string>
    <string name="are_you_sure_want_to_logout"> Are you sure, you want to logout?</string>
    <string name="location_not_supported">Location not supported in this device</string>
    <string name="location_not_enabled">Location not enabled!</string>
    <string name="open_location_settings">Open location settings</string>
    <string name="Cancel">cancel</string>
    <string name="save">Save</string>
    <string name="alert">Alert</string>
    <string name="allow_asked_permission_to_make_this_work">Allow asked permissions to make this work. Click begin to proceed.</string>
    <string name="begin">Begin</string>
    <string name="take_picture">Take Picture</string>
    <string name="gallery">Gallery</string>
    <string name="not_available">Not Available</string>
    <string name="profile">Profile</string>
    <string name="no_data_found">No data found</string>
    <string name="CallUs">Call us :</string>
    <string name="EmailUs">Email us :</string>
    <string name="Website">Website :</string>
    <string name="enter_origin">Enter origin</string>
    <string name="enter_destination">Enter destination</string>
    <string name="status">Status</string>
    <string name="date">Date</string>
    <string name="pick_up_date">Pick-up Date</string>
    <string name="amount">Amount</string>
    <string name="booking_id">Trip Id :</string>
    <string name="truck_type">Vehicle type</string>
    <string name="Please_select_the_options">Please select the options</string>
    <string name="time">Time</string>
    <string name="booking_details">Booking details</string>
    <string name="cancel_bookings">Cancel bookings</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="valid_until">Valid until</string>
    <string name="can_be_used">Can be used</string>
    <string name="times">time(s)</string>
    <string name="rides">Rides</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_cras_sit_amet_elementum_lectus_cras_pellentesque_mi_sapien_sit_amet_tristique_turpis_aliquet_sed">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sit amet elementum lectus. Cras pellentesque mi sapien, sit amet tristique turpis aliquet sed.</string>
    <string name="tncapplied"><![CDATA[*T&C Applied]]></string>
    <string name="today">Today</string>
    <string name="fare_break_up">Fare Break-up</string>
    <string name="cancellation_charger">Cancellation Charges :</string>
    <string name="cancellation_charges">Cancellation Charges</string>
    <string name="total_charges">Total Charges :</string>
    <string name="vehical_name">Vehicle Name</string>
    <string name="pick_up">Pick-up</string>
    <string name="drop_off">Drop-off</string>
    <string name="booking_Details">Booking Details</string>
    <string name="accepted">Accepted</string>
    <string name="trip_start">Trip Start</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="pending">Pending</string>
    <string name="trip_id">Trip Id</string>
    <string name="upcoming_bookings">Upcoming Bookings</string>
    <string name="past_bookings">Past Bookings</string>
    <string name="error_msg_enter_comment">Please enter comment</string>
    <string name="any_comment">Comment</string>
    <string name="submit">Submit</string>
    <string name="Please_select_the_atleast_1_option">Please select at least one option</string>
    <string name="your_booking_Successful">Your booking is successful</string>
    <string name="description">Description</string>
    <string name="wallet">Wallet</string>
    <string name="nav_offers">Offers</string>
    <string name="sudrivesnum"><u>+91 76830 55008</u>.</string>
    <string name="outstationBook">Are you trying to book an Outstation Ride?
Yes we are accepting Outstation rides offline.</string>
    <string name="justcallus">Just Call us at</string>
</resources>