<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.OutstationStaticActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_height="?actionBarSize"
        android:layout_width="match_parent"
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:title="Later/ Book outstation/ rental"/>


    <ImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:id="@+id/texi"
        android:src="@drawable/ic_taxi"
        app:layout_constraintBottom_toTopOf="@+id/tv_bookrental"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_20sdp"
        />


    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/tv_bookrental"
        android:text="@string/outstationBook"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/colorBlack"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/justcallus"
        android:text="@string/justcallus"
        app:layout_constraintTop_toBottomOf="@+id/tv_bookrental"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_30sdp"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/colorBlack"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/tv_Phone"
        android:text="@string/sudrivesnum"

        app:layout_constraintTop_toBottomOf="@+id/justcallus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/_15sdp"
        android:textColor="#279FFF"
        />

</androidx.constraintlayout.widget.ConstraintLayout>