<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_ll_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_20"
    android:layout_marginRight="@dimen/margin_20"
    android:background="@drawable/failure_dialog"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingTop="10dp"
    tools:ignore="MissingPrefix">

    <ImageView
        android:id="@+id/SingleButton_icon"
        android:layout_width="@dimen/margin_70"
        android:layout_height="@dimen/margin_70"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_10"
        android:src="@drawable/success_24dp"/>

    <TextView
        android:id="@+id/SingleButton_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginTop="@dimen/margin_30"
        android:text="@string/confirmation"
        android:textColor="@color/colorGrayDark"
        android:textSize="@dimen/text_16"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/SingleButton_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_20"
        android:gravity="center"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginBottom="@dimen/margin_10"
        android:paddingLeft="@dimen/padding_10"
        android:paddingRight="@dimen/padding_10"
        android:paddingTop="@dimen/margin_10"
        android:paddingBottom="@dimen/margin_10"
        android:text="@string/would_you_like_for_your_purchase_to_be_reveiwed_for_a_free"
        android:textColor="@color/colorGrayDark"
        android:textSize="@dimen/text_14" />


    <TextView
        android:id="@+id/refund_done_dialog_tv"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="here"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_16"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/SingleButton_done"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_20"
        android:layout_marginLeft= "@dimen/margin_30"
        android:layout_marginRight="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_weight="1"
        android:background="@drawable/button_shap"
        android:gravity="center"
        android:fontFamily="@font/montserrat_semibold"
        android:paddingBottom="@dimen/padding_10"
        android:paddingLeft="@dimen/padding_5"
        android:paddingRight="@dimen/padding_5"
        android:paddingTop="@dimen/padding_10"
        android:text="@string/ok"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_16"
        android:textStyle="bold"
        android:visibility="visible" />


    <TextView
        android:id="@+id/SingleButton_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_2"
        android:gravity="center"
        android:padding="@dimen/padding_10"
        android:text="@string/cancel"
        android:textColor="@color/colorRed"
        android:textSize="@dimen/text_15"
        android:visibility="gone" />


</LinearLayout>
