<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_ll_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_20"
    android:layout_marginRight="@dimen/margin_20"
    android:background="@drawable/terms_condition_dialog"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingTop="5dp"
    tools:ignore="MissingPrefix">

    <ImageView
        android:id="@+id/SingleButton_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_5"
        android:padding="12dp"
        android:src="@drawable/close_24dp"
        android:text="X" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/SingleButton_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_semibold"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/confirmation"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_18"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none">

        <TextView
            android:id="@+id/SingleButton_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_10"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_20"
            android:gravity="start"
            android:fontFamily="@font/montserrat_regular"
            android:paddingBottom="@dimen/margin_10"
            android:paddingLeft="@dimen/padding_10"
            android:paddingRight="@dimen/padding_10"
            android:paddingTop="@dimen/margin_10"
            android:text="@string/would_you_like_for_your_purchase_to_be_reveiwed_for_a_free"
            android:textColor="@color/colorGrayLight"
            android:textSize="@dimen/text_14" />
        </ScrollView>

        <TextView
            android:id="@+id/SingleButton_done"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/margin_20"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_weight="1"
            android:background="@drawable/button_shap"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/padding_10"
            android:paddingLeft="@dimen/padding_5"
            android:paddingRight="@dimen/padding_5"
            android:paddingTop="@dimen/padding_10"
            android:text="@string/ok"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_16"
            android:textStyle="bold"
            android:visibility="gone" />


        <TextView
            android:id="@+id/SingleButton_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/margin_15"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancel"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_15"
            android:visibility="gone" />
    </LinearLayout>
</RelativeLayout>
