<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="0dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <RelativeLayout
            android:id="@+id/rl_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp">



                <TextView
                    android:id="@+id/tv_promo_tittle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_toStartOf="@+id/btn_apply_coupon"
                    android:text="@string/your_booking_Successful"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"/>


            <Button
                android:id="@+id/btn_apply_coupon"
                android:fontFamily="@font/montserrat_regular"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/yellow_rec_round_border"
                android:stateListAnimator="@null"
                android:text="Apply"
                android:textAllCaps="false"
                android:textColor="@color/colorGrayDark"
                android:textSize="@dimen/_10sdp" />




            <TextView
                android:id="@+id/tv_promo_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_promo_tittle"
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_regular"
                android:inputType="textMultiLine|textNoSuggestions"
                android:text="@string/description"
                android:textColor="@color/colorGrayDark" />

            <TextView
                android:id="@+id/tv_promo_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/tv_promo_detail"
                android:layout_gravity="end"
                android:maxLines="2"
                android:layout_marginTop="@dimen/_2sdp"
                android:textSize="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/time"
                android:textColor="@color/colorGrayLight" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>