<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="@dimen/_2sdp">

        <RelativeLayout
            android:id="@+id/rl_notificationlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rl_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp">

                <LinearLayout
                    android:id="@+id/ll_notification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_notification"
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/notification_icon" />

                    <TextView
                        android:id="@+id/tv_notification_title"
                        android:fontFamily="@font/montserrat_regular"
                        android:textSize="@dimen/_10sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine|textNoSuggestions"
                        android:layout_marginLeft="@dimen/margin_10"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:text="@string/your_booking_Successful"
                        android:textColor="@color/colorGrayDark"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_notification_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_10sdp"
                    android:fontFamily="@font/montserrat_regular"
                    android:layout_below="@+id/ll_notification"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:text="@string/description"
                    android:textColor="@color/colorGrayDark"/>

                <TextView
                    android:id="@+id/tv_notification_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_notification_msg"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:maxLines="2"
                    android:textSize="@dimen/_8sdp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/time"
                    android:textColor="@color/colorGrayLight" />
            </RelativeLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</layout>